# DigitalCoach

./: .gitignore  README.md  docker-compose.yml  installDeps.sh  package-lock.json  package.json  playwright.config.ts
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: playwright.yml
.postman/: config.json
digital-coach-app/: .dockerignore  .env.example  .firebaserc  Dockerfile  firebase.json  firestore.rules  next.config.js  package-lock.json  package.json  tsconfig.json  typedoc.json
digital-coach-app/components/: profilePic.tsx  video.tsx
digital-coach-app/docs/: hierarchy.html  index.html
digital-coach-app/functions/: .env.example  package-lock.json  package.json
digital-coach-app/pages/: _app.tsx  client_test.tsx  (+7 more)
mlapi/: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
mlapi/data/: __init__.py  interviews.py
mlapi/redisStore/: monitor.py  myconnection.py  queue.py  worker.py
mlapi/routes/: assemblyai.py  audio_analysis.py  heygen.py  interview.py  llm.py  test_firebase.py  user.py
mlapi/schemas/: __init__.py  audio.py  create_answer.py  feedback.py  heygen.py  interview.py  user.py
mlapi/services/: firebase_init.py  firebase_setup.py  orchestrator.py
mlapi/tasks/: assemblyai_api.py  audio_analysis.py  create_answer_task.py  prompts.py  seed.py  starscores.py
mlapi/tasks/helpers/: av_processing.py  competency_feedback.py  constants.py  create_answer_helpers.py  text_preprocessing.py
mlapi/tests_old/: test_create_answer.py
tests/: auth-test.spec.ts  interview.spec.ts
(+49 files in other folders)
